# VoxRoom

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-isaac-bench.txt
assets/: README.md
configs/: voxroom_online.yaml
data/: README.md
docs/: method.md  reproduction.md
external_baselines/: README.md
result/: README.md
scripts/: activate_voxroom_env.sh  annotate_online_roomseg_door_completion_direct_20260610.sh  annotate_online_roomseg_no_corner_20260609.sh  evaluate_all_roomseg_baselines.sh  open_isaac_stage.py  render_final_door_completion_snapshots.py  render_readme_kujiale0003_demo.py  run_all_scenes_collect_topology_baseline_random_frontier.sh  run_all_scenes_random_frontier.sh  run_collect_topology_baseline_random_frontier.sh  run_collect_tvars_original_random_frontier.sh  run_final_door_completion_scheme_20260610.sh  run_offline_baselines_from_voxroom_snapshots.sh  run_one_scene_random_frontier.sh  run_paper_kujiale0003_smoke.sh  run_voxroom_isaac_env.sh  setup_voxroom_env.sh
tests/: test_active_topology_mask_rasterization.py  test_baseline_metadata_gate.py  test_baseline_relabel_and_domain.py  test_baseline_snapshot_contract.py  test_ceiling_active_z_no_2m_fallback.py  test_closed_loop_eval_smoke.py  test_comparison_link_method_gt.py  test_eval_accepts_baseline_outputs.py  test_evaluation_bridge_gate.py  test_frontier_terminal_registry.py  test_ipa_input_image_contract.py  test_isaac_depth_semantics.py  test_navigation_path_replan_freeze.py  test_offline_baseline_runner_smoke.py  test_online_roomseg_approval_gate.py  (+20 more)
(+199 files in other folders)
